--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="RuwayHsu">
+    <meta name="keywords" content="RuwayHsu, 滷滷熊熊, Discord Bot, Twitch Bot, VTuber, 技術支援, Python開發, osu!, 個人網站, 委託服務, Zen Studio, 遊戲實況, AI技術, 協作夥伴">
     <!-- Open Graph 標籤 -->
     <meta property="og:title" content="RuwayHsu滷滷熊熊">
     <meta property="og:description" content="目前網站還沒完工!!請稍後再撥!!逼逼~~">
