--- a/index.html
+++ b/index.html
@@ -476,6 +476,8 @@
             <a href="#partners">協作夥伴與贊助者</a>
             <a href="#donators">抖內人士</a>
             <a href="#achievement">成就</a>
+            <a href="#donation">抖內須知</a>
+            <a href="#adv">工商須知</a>
             <a href="#links">更多連結</a>
         </div>
     </div>
@@ -810,6 +812,79 @@
                     <li>2024年11月8日使用滑鼠鍵盤達成osu!全球50000排名</li>
                     <li>2025年3月推特突破1000追</li>
                 </ul>
+            </div>
+
+            <div id="donation" class="section">
+                <h2>抖內須知</h2>
+                <h3>感謝你願意支持我！在你進行抖內之前，請先閱讀以下須知內容，以確保雙方權益</h3>
+                <ol>
+                    <li>抖內隻前請先評估自身的經濟能力</li>
+                    <li>抖內為自願行為，恕不接受退款，請確認自己的經濟狀況無虞後再支持</li>
+                    <li>抖內不等同於購買商品或服務，也不保證任何特定的回報。</li>
+                </ol>
+                <h3>以下提供給你們的抖內管道</h3>
+                <ol>
+                    <li>Twitch 小奇點、訂閱(贈訂)
+                        <ul>
+                            <li>小奇點一顆收到的回饋為0.01美金，訂閱和贈訂則是1美金</li>
+                            <li>會給予相對應的貢丸回饋作為感謝獎勵</li>
+                        </ul>
+                    </li>
+                    <li>Steam 錢包點數、贈送遊戲(DLC)
+                        <ul>
+                            <li>如果想要以此方式抖內者可以跟我索要Steam好友ID</li>
+                            <li>由於退款方式偏麻煩，所以請再三確認後再抖內</li>
+                            <li>Steam遊戲類觀眾場可享有優先權力</li>
+                        </ul>
+                    </li>
+                    <li>Valorant Mycard點數
+                        <ul>
+                            <li>其實這個方案會是最理想方案因為最方便</li>
+                            <li>退款方式也蠻麻煩的，所以恕不退款</li>
+                            <li>Valorant觀眾場以及內鬥可享有優先權力</li>
+                            <li>如果觀眾場人數過多，抖內者可以享有雙倍名額，但名額與名額之間必須休息至少一場</li>
+                        </ul>
+                    </li>
+                    <li>綠界管道
+                        <ul>
+                            <li>綠界管道尚未申請</li>
+                        </ul>
+                    </li>
+                    <li>個人帳戶
+                        <ul>
+                            <li>由於擔心個人帳戶金流產生問題，所以只允許老觀眾使用此方案抖內</li>
+                            <li>需要使用此方案抖內時需要私訊並且請附上轉帳截圖</li>
+                        </ul>
+                    </li>
+                </ol>
+            </div>
+
+            <div id="adv" class="section">
+                <h2>工商廣告須知</h2>
+                <h3>感謝你願意支持我！在你進行工商廣告之前，請先閱讀以下須知內容，以確保雙方權益</h3>
+                <ul>
+                    <li>工商廣告須知為了讓觀眾能夠更好地了解廣告內容，請務必提供詳細的廣告資訊，包括產品名稱、特點、價格等。</li>
+                    <li>廣告內容必須符合Twitch的社群規範和法律法規，禁止任何違法或不當內容。</li>
+                    <li>廣告時長和形式需提前與我協商，並達成共識。</li>
+                    <li>廣告費用需在廣告開始前支付，具體金額可根據實際情況協商。</li>
+                </ul>
+                <h3>以下提供給你們兩個工商廣告管道</h3>
+                <ol>Loading廣告
+                    <ul>
+                        <li>此廣告為在Loading時的廣告</li>
+                        <li>一份廣告時長提供120秒</li>
+                        <li>一次撥放12秒，3秒進行轉場至下一份廣告</li>
+                        <li>廣告時長並不會平分，如果需要多份廣告平分額度那將以1.25的n次方計算，無條件捨去百位數(不含)</li>
+                        <li>圖片限制為寬930px高325px之png或jpg</li>
+                    </ul>
+                </ol>
+                <ol>實況介面廣告
+                    <ul>
+                        <li>此廣告為在實況時的廣告</li>
+                        <li>需要給予我播放、中斷時長，例如播放1分鐘中斷29分鐘，總計30分鐘</li>
+                        <li>圖片限制為寬800px高200px，圓角36px之png或jpg</li>
+                    </ul>
+                </ol>
             </div>
 
             <div id="links" class="section">
