--- a/pop_vtb/vtb_0.html
+++ b/pop_vtb/vtb_0.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>V-Pop VTuber 競點計劃</title>
-<style>
-@font-face {
-    font-family: "count_font";
-    src: url("font/Eighto.ttf") format("truetype");
-}
-@font-face {
-    font-family: "word_font";
-    src: url("font/NaikaiFont-SemiBold.woff") format("truetype");
-}
-body {
-    font-family: 'word_font', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-.game-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-#vtuber {
-    cursor: pointer;
-    width: 200px;
-}
-#click-counter {
-    font-family: "count_font", sans-serif;
-    font-size: 64px;
-    color: #fff;
-    margin-top: 20px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>恩亨</title>
+    <style>
+        @font-face {
+            font-family: "count_font";
+            src: url("font/Eighto.ttf") format("truetype");
+        }
+        @font-face {
+            font-family: "word_font";
+            src: url("font/NaikaiFont-SemiBold.woff") format("truetype");
+        }
+        body {
+            font-family: 'word_font', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .game-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        #vtuber {
+            width: 200px;
+            cursor: pointer;
+            transition: transform 0.1s ease-in-out;
+        }
+        #vtuber.active {
+            transform: scale(1.1);
+        }
+        #click-counter {
+            font-family: "count_font", sans-serif;
+            font-size: 64px;
+            color: #fff;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="game-container">
@@ -46,39 +50,35 @@ body {
         <div id="click-counter">0</div>
     </div>
 
-<script>
-// 預加載聲音檔案
-var popSound = new Audio('sound/pop.mp3');
+    <script>
+        // 初始化變數
+        const vtuber = document.getElementById('vtuber');
+        const counter = document.getElementById('click-counter');
+        const popSound = new Audio('sound/pop.mp3');
+        let clickCount = 0;
 
-// 獲取圖片元素
-var vtuberImg = document.getElementById('vtuber');
-var clickCount = 0;
+        // 點擊按下時
+        vtuber.addEventListener('mousedown', function() {
+            this.src = 'img/num0/num0-open.png';
+            this.classList.add('active');
+            popSound.play();
+            clickCount++;
+            counter.textContent = clickCount;
+        });
 
-// 更新分數顯示
-function updateScoreDisplay() {
-    document.getElementById('click-counter').textContent = clickCount;
-}
+        // 放開時
+        vtuber.addEventListener('mouseup', function() {
+            this.src = 'img/num0/num0-close.png';
+            this.classList.remove('active');
+        });
 
-// 按下時的事件
-vtuberImg.addEventListener('mousedown', function() {
-    this.src = 'img/num0/num0-open.png';
-    popSound.play();
-    clickCount++;
-    updateScoreDisplay();
-});
+        // 滑鼠離開時
+        vtuber.addEventListener('mouseleave', function() {
+            this.src = 'img/num0/num0-close.png';
+            this.classList.remove('active');
+        });
+    </script>
 
-// 放開時的事件
-vtuberImg.addEventListener('mouseup', function() {
-    this.src = 'img/num0/num0-open.png';
-    setTimeout(() => {
-        this.src = 'img/num0/num0-close.png';
-    }, 100); // 0.1秒後回到關閉狀態
-});
-
-// 滑鼠離開時確保回到關閉狀態
-vtuberImg.addEventListener('mouseleave', function() {
-    this.src = 'img/num0/num0-close.png';
-});
-</script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93b059907fdb12d1',t:'MTc0NjQ0OTI4Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
