--- a/pop_vtb/vtb_0.html
+++ b/pop_vtb/vtb_0.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="Nana啵啵">
+    <meta property="og:description" content="亂做一通">
+    <meta property="og:image" content="https://a.imglink.io/RpAwo.png">
+    <meta property="og:url" content="https://ruwayhsu.github.io/pop_vtb/vtb_0.html">
+    <meta property="og:type" content="website">
     <title>恩亨</title>
     <style>
         @font-face {
