--- a/pop_vtb/vtb_0.html
+++ b/pop_vtb/vtb_0.html
@@ -6,7 +6,7 @@
 
     <meta property="og:title" content="Nana啵啵">
     <meta property="og:description" content="亂做一通">
-    <meta property="og:image" content="https://a.imglink.io/RpAwo.png">
+    <meta property="og:image" content="pop_vtb\img\num0\num0-close.png">
     <meta property="og:url" content="https://ruwayhsu.github.io/pop_vtb/vtb_0.html">
     <meta property="og:type" content="website">
     <title>恩亨</title>
