--- a/tetr404/404.html
+++ b/tetr404/404.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="RuwayHsu">
+    <meta name="keywords" content="RuwayHsu, 滷滷熊熊, Discord Bot, Twitch Bot, VTuber, 技術支援, Python開發, osu!, 個人網站, 委託服務, Zen Studio, 遊戲實況, AI技術, 協作夥伴">
+    <!-- Open Graph 標籤 -->
+    <meta property="og:title" content="Tetr404">
+    <meta property="og:description" content="這是一個自己寫的俄羅斯方塊">
+    <!--<meta property="og:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">-->
+    <meta property="og:image" content="https://a.imglink.io/RpAwo.png">
+    <meta property="og:url" content="https://ruwayhsu.github.io/">
+    <meta property="og:type" content="website">
+    <!-- Twitter Card 標籤 -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tetr404">
+    <meta name="twitter:description" content="這是一個自己寫的俄羅斯方塊">
+    <!--<meta name="twitter:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">-->
+    <meta name="twitter:image" content="https://a.imglink.io/RpAwo.png">
+
+    <link rel="icon" type="image/png" href="https://a.imglink.io/S9PuB.png">
     <title>404 Tetris</title>
     <style>
         body {
