--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="RuwayHsu滷滷熊熊">
     <meta property="og:description" content="目前網站還沒完工!!請稍後再撥!!逼逼~~">
     <!--<meta property="og:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">-->
-    <meta property="og:image" content="https://a.imglink.io/RpAwo.png">
+    <meta property="og:image" content="img/ruwayhsu.png">
     <meta property="og:url" content="https://ruwayhsu.github.io/">
     <meta property="og:type" content="website">
     <!-- Twitter Card 標籤 -->
@@ -17,9 +17,9 @@
     <meta name="twitter:title" content="RuwayHsu滷滷熊熊">
     <meta name="twitter:description" content="目前網站還沒完工!!請稍後再撥!!逼逼~~">
     <!--<meta name="twitter:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">-->
-    <meta name="twitter:image" content="https://a.imglink.io/RpAwo.png">
+    <meta name="twitter:image" content="img/ruwayhsu.png">
 
-    <link rel="icon" type="image/png" href="https://a.imglink.io/S9PuB.png">
+    <link rel="icon" type="image/png" href="img/icon.png">
     <title>RuwayHsu滷滷熊熊</title>
     <style>
         body {
@@ -587,7 +587,7 @@
                 <h1>RuwayHsu滷滷熊熊</h1>
                 <div class="home-content">
                     <div class="left-column">
-                        <img src="https://a.imglink.io/RpAwo.png" alt="RuwayHsu">
+                        <img src="img/ruwayhsu.png" alt="RuwayHsu">
                     </div>
                     <div class="right-column">
                         <h2>RuwayHsu滷滷熊熊루루셩셩</h2>
@@ -762,7 +762,7 @@
                 </div>
                 <div class="partner-content">
                     <div class="partner-left">
-                        <img src="https://a.imglink.io/RbWx4.jpg" alt="Zenen">
+                        <img src="img/zenen.jpg" alt="Zenen">
                     </div>
                     <div class="partner-right">
                         <h3>熊熊真心話</h3>
@@ -795,7 +795,7 @@
                 </div>
                 <div class="partner-content">
                     <div class="partner-left">
-                        <img src="https://a.imglink.io/Rs6Zg.jpg" alt="Muika">
+                        <img src="img/muika.jpg" alt="Muika">
                     </div>
                     <div class="partner-right">
                         <h3>熊熊真心話</h3>
@@ -829,12 +829,12 @@
                 </div>
                 <div class="partner-content">
                     <div class="partner-left">
-                        <img src="https://a.imglink.io/S9keE.jpg" alt="Muika">
+                        <img src="img/arashi.jpg" alt="阿嵐酷酷圖">
                     </div>
                     <div class="partner-right">
                         <h3>熊熊真心話</h3>
                         <p>阿嵐是我認為御姊風格類模型最厲害的一條龍繪師，當初會看見阿嵐的原因是因為妍妍Q版自定義模型 的販售，接著仔細去看他的作品才發現他的御姊模型很香ww(x，那因為真的很香所以就委託頭貼試看看結果光是草圖就愛了哈哈，總之有姊姊風格需求的人們可以找阿嵐，大推!!!</p>
-                        <img src="https://a.imglink.io/S9p4W.jpg" alt="阿嵐可愛圖">
+                        <img src="img/arashi_cute.jpg" alt="阿嵐可愛圖">
                     </div>
                 </div>
                 <div class="partner-buttons">
