--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="RuwayHsu滷滷熊熊">
     <meta property="og:description" content="目前網站還沒完工!!請稍後再撥!!逼逼~~">
     <!--<meta property="og:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">-->
-    <meta property="og:image" content="img/ruwayhsu.png">
+    <meta property="og:image" content="https://pbs.twimg.com/media/Gl5mU5jXkAAO_6Y?format=jpg&name=small">
     <meta property="og:url" content="https://ruwayhsu.github.io/">
     <meta property="og:type" content="website">
     <!-- Twitter Card 標籤 -->
@@ -17,7 +17,7 @@
     <meta name="twitter:title" content="RuwayHsu滷滷熊熊">
     <meta name="twitter:description" content="目前網站還沒完工!!請稍後再撥!!逼逼~~">
     <!--<meta name="twitter:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">-->
-    <meta name="twitter:image" content="img/ruwayhsu.png">
+    <meta name="twitter:image" content="https://pbs.twimg.com/media/Gl5mU5jXkAAO_6Y?format=jpg&name=small">
 
     <link rel="icon" type="image/png" href="img/icon.png">
     <title>RuwayHsu滷滷熊熊</title>
